# pmenu

./: .gitignore  .project-actions.json  README.md  pmenu  pmenu.py  pmenu_fm  pyproject.toml
pmenu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pmenu_lib/: __init__.py  cli.py  pmenu.py
